--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".HomeActivity"></activity>
         <activity android:name=".NewTripActivity"></activity>
+        <activity android:name=".NewGastedActivity"></activity>
     </application>
 
 </manifest>
