--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".HomeActivity"></activity>
         <activity android:name=".NewTripActivity"></activity>
-        <activity android:name=".NewGastedActivity"></activity>
+        <activity android:name=".NewExpenseActivity"></activity>
     </application>
 
 </manifest>
