--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".NewTripActivity" />
         <activity android:name=".NewExpenseActivity" />
-        <activity android:name=".TripListActivity"></activity>
+        <activity android:name=".TripListActivity" />
+        <activity android:name=".ExpenseListActivity"></activity>
     </application>
 
 </manifest>
