--- a/config/quality.gradle
+++ b/config/quality.gradle
@@ -66,7 +66,7 @@ task pmd(type: Pmd) {
     exclude '**/gen/**'
 
     reports {
-        xml.enabled = false
+        xml.enabled = true
         html.enabled = true
         xml {
             destination "$reportsDir/pmd/pmd.xml"
