--- a/config/quality.gradle
+++ b/config/quality.gradle
@@ -29,6 +29,21 @@ task checkstyle(type: Checkstyle) {
     source 'src'
     include '**/*.java'
     classpath = files()
+
+    ignoreFailures true // Uncomment to fail where warnings > 0
+    showViolations true
+    def maxErrors = 5 // aim to eventually reduce this to 0
+    doLast {
+        reports.all { report ->
+            def outputFile = report.destination
+            if (outputFile.exists()) {
+                def count = outputFile.text.count("<error ")
+                if (count > maxErrors) {
+                    throw new GradleException("There were $count checkstyle warnings! For more info check $outputFile")
+                }
+            }
+        }
+    }
 }
 
 task findbugs(type: FindBugs, dependsOn: "assembleDebug") {
@@ -43,8 +58,8 @@ task findbugs(type: FindBugs, dependsOn: "assembleDebug") {
     exclude '**/gen/**'
 
     reports {
-        xml.enabled = false
-        html.enabled = true
+        xml.enabled = true
+        html.enabled = false
         xml {
             destination "$reportsDir/findbugs/findbugs.xml"
         }
@@ -57,7 +72,7 @@ task findbugs(type: FindBugs, dependsOn: "assembleDebug") {
 }
 
 task pmd(type: Pmd) {
-    ignoreFailures = false
+    ignoreFailures = true
     ruleSetFiles = files("$configDir/pmd/pmd-ruleset.xml")
     ruleSets = []
 
