--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,18 @@ android {
         }
     }
     buildTypes {
-        release {
-            signingConfig signingConfigs.release
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    debug {
+        debuggable true
+        minifyEnabled false
+        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        testCoverageEnabled true
     }
+    release {
+        minifyEnabled false
+        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        testCoverageEnabled false
+    }
+}
     lintOptions {
         abortOnError false
     }
