--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: android
 jdk: oraclejdk8
 android:
   components:
-    # Update Android SDK Tools
+    - tools
+    - platform-tools
     - tools
 
     # Support library
@@ -24,6 +25,10 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-android-17
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
 # Emulator Management: Create, Start and Wait
 before_script:
