--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         debuggable true
         minifyEnabled false
         proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        testCoverageEnabled true
+        testCoverageEnabled = true
     }
     release {
         minifyEnabled false
